# pub2csv

./: .gitignore  README.md  download.py  filter.py  paper.md  pub2csv.py  pyproject.toml  requirements.txt  setup.py
ressources/: pubmap.parquet
src/pub2csv/: download.py  filter.py  mapper.py  parser.py  pub2csv.py
