[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pub2csv"
version = "0.1.0"
description = "Work in progress"
authors = [{ name = "drfox", email = "drfox@proton.me" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL3" }

[tool.setuptools.packages.find]
where = ["src"]

